Fix consent alignment

--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -410,7 +410,7 @@ figure img {
 }
 
 .CookieConsent {
-  align-items: center;
+  align-items: center !important;
   padding: 0 2rem;
 }
 .CookieConsent button {
